@startuml
'https://plantuml.com/state-diagram

[*] -> ByPoints

ByPoints --> ByPoints : next\n[else]
ByPoints --> Forty : next\n[pointsOf(winner)==THIRTY]
Forty --> Forty : next\n[else]
Forty --> Deuce : next\n[winner!=player\n&& pointsOf(winner)=THIRTY]
Forty --> Game : next\n[winner==player]
Deuce -> Advantage : next
Advantage -> Game : next\n[winner==player]
Advantage -> Deuce : next\n[else]

Game --> [*]

ByPoints : pointsA
ByPoints : pointsB
Advantage : player
Game : winner
Forty : player
Forty : pointsOther

@enduml